fix for VAN-20779 and ui-list-checkbox high contrast ui update

--- a/vtr-ui/src/app/components/ui/ui-list-checkbox/ui-list-checkbox.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-list-checkbox/ui-list-checkbox.component.scss
@@ -61,9 +61,11 @@
 					&:hover::before {
 						@media #{$white-on-black} {
 							@include high-contrast-black-border;
+							border-radius: 0.25rem !important;
 						}
 						@media #{$black-on-white} {
 							@include high-contrast-white-border;
+							border-radius: 0.25rem !important;
 						}
 					}
 				}
@@ -93,10 +95,14 @@
 							@media #{$white-on-black} {
 								@include high-contrast-black-background;
 								@include high-contrast-black-border;
+								box-shadow: none;
+								border-radius: 0.25rem !important;
 							}
 							@media #{$black-on-white} {
 								@include high-contrast-white-background;
 								@include high-contrast-white-border;
+								box-shadow: none;
+								border-radius: 0.25rem !important;
 							}
 						}
 						&::after {
